--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="node_modules/mathjs/dist/math.min.js"></script>
     <script src="src/bird.js"></script>
     <script src="src/pipe.js"></script>
+    <script src="src/ga.js"></script>
     <script src="src/perceptron.js"></script>
     <script src="src/nn.js"></script>
     <script src="src/point.js"></script>
